--- a/dashboard.html
+++ b/dashboard.html
@@ -3,232 +3,258 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Les NGANYIRA — Dashboard</title>
+  <title>Dashboard — Les NGANYIRA</title>
   <link rel="stylesheet" href="style.css"/>
   <style>
-    /* Welcome banner */
-    .welcome {
-      position: relative;
-      background: linear-gradient(135deg, #e8f0ff, #fff);
-      border: 1px solid #e6ecfb;
-      border-radius: 16px;
-      padding: 16px;
-      display: grid;
-      grid-template-columns: auto 1fr auto;
-      gap: 12px;
-      align-items: center;
-      box-shadow: 0 8px 20px rgba(31,63,179,.08);
-    }
-    .avatar {
-      width: 56px; height: 56px; border-radius: 50%;
-      background: #1f3fb3; color: #fff; display:flex; align-items:center; justify-content:center;
-      font-weight: 700; letter-spacing: .5px;
-      box-shadow: 0 6px 14px rgba(31,63,179,.25);
-      user-select: none;
-    }
-    .w-text h2 { margin:0; font-size: 20px; }
-    .w-text p  { margin:4px 0 0; color:#4b5563; }
-    .wave { font-size: 28px; display:inline-block; transform-origin: 70% 70%; }
-    .wave.animate { animation: wave 1.6s ease-in-out 2; }
-    @keyframes wave {
-      0% { transform: rotate(0deg); }
-      20% { transform: rotate(18deg); }
-      40% { transform: rotate(-10deg); }
-      60% { transform: rotate(12deg); }
-      80% { transform: rotate(-6deg); }
-      100%{ transform: rotate(0deg); }
-    }
-    .w-actions { display:flex; gap:8px; flex-wrap:wrap; }
-    .chip {
-      background:#eef3ff; color:#1f3fb3; border-radius:999px; padding:6px 10px; font-size:12px;
-      display:inline-flex; align-items:center; gap:6px;
-    }
-    .btn.primary { background:#1f3fb3; color:#fff; border:0; border-radius:10px; padding:10px 12px; text-decoration:none; font-weight:600; }
-    .btn.ghost { background:#fff; color:#1f3fb3; border:1px solid #d8deea; border-radius:10px; padding:10px 12px; text-decoration:none; font-weight:600; }
-
-    /* Confetti */
-    .confetti { position:absolute; inset:0; pointer-events:none; overflow:hidden; }
-    .confetti span {
-      position:absolute; top:-10px; font-size:14px; opacity:.9; animation: fall linear forwards;
-    }
-    @keyframes fall {
-      to { transform: translateY(140%); opacity: .95; }
-    }
-
-    /* Stats boxes */
-    .kpis { display:grid; grid-template-columns: repeat(auto-fit,minmax(180px,1fr)); gap:12px; }
-    .kpi { background:#fff; border:1px solid #eef1f7; border-radius:12px; padding:14px; }
-    .kpi .lbl { font-size:13px; color:#4b5563; }
-    .kpi .val { font-size:20px; font-weight:700; }
-
-    /* Table */
-    table.simple { width:100%; border-collapse:collapse; }
-    table.simple th, table.simple td { padding:8px; border-bottom:1px solid #eef1f7; text-align:left; }
+    .wrap{max-width:1100px;margin:16px auto;padding:0 12px}
+    .grid{display:grid;gap:12px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
+    .card{background:#fff;border:1px solid #eef1f7;border-radius:14px;padding:14px}
+    .kpi{display:flex;flex-direction:column;gap:6px}
+    .kpi .lbl{font-size:12px;color:#6b7280}
+    .kpi .val{font-size:22px;font-weight:800}
+    table.simple{width:100%;border-collapse:collapse}
+    table.simple th,table.simple td{padding:8px;border-bottom:1px solid #eef1f7;text-align:left}
+    .pill{display:inline-flex;align-items:center;gap:6px;padding:6px 10px;border-radius:999px;background:#eef3ff;color:#1f3fb3;font-weight:600}
+    .btn{padding:8px 10px;border-radius:10px;background:var(--accent);color:#fff;border:0;font-weight:700;text-decoration:none;cursor:pointer}
+    .btn.secondary{background:#eef3ff;color:#1f3fb3}
+    .btn.ghost{background:#fff;border:1px solid #d8deea;color:#1f2a4a}
+    .muted{color:#6b7280}
+    .danger{color:#b91c1c}
   </style>
 </head>
 <body>
-  <!-- NAVBAR -->
   <header class="nav">
     <div class="nav-left">Les NGANYIRA</div>
     <nav class="nav-right">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contribute.html">Make a Contribution</a>
-      <a href="terms.html">Terms & Policies</a>
-      <button id="logoutBtn" class="nav-btn">Log out</button>
+      <a href="home.html">Ahabanza</a>
+      <a href="about.html">Ibyerekeye</a>
+      <a href="services.html">Serivisi</a>
+      <a href="contribute.html">Tanga umusanzu</a>
+      <a href="terms.html">Amategeko & Politiki</a>
+      <button id="logoutBtn" class="nav-btn">Sohoka</button>
     </nav>
   </header>
 
-  <div class="auth-card" style="margin-top:16px;">
-    <!-- WELCOME BANNER -->
-    <section class="welcome" id="welcomeBanner">
-      <div class="avatar" id="avatar">LN</div>
-      <div class="w-text">
-        <h2 id="greet">Welcome!</h2>
-        <p id="welcomeLine">Glad to see you here.</p>
-        <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap;">
-          <a href="contribute.html" class="btn primary">Make a Contribution</a>
-          <a href="home.html" class="btn ghost">Go to Home</a>
-          <a href="services.html" class="btn ghost">See Services</a>
-        </div>
-        <div style="margin-top:10px; display:flex; gap:8px; flex-wrap:wrap;">
-          <span class="chip">📅 Reminder: 25th saving day</span>
-          <span class="chip">🌍 Multi-currency → CAD</span>
-          <span class="chip">🔒 Local data on your device</span>
-        </div>
-      </div>
-      <div class="wave animate" aria-hidden="true">👋</div>
-      <div class="confetti" id="confetti"></div>
-    </section>
+  <main class="wrap">
+    <h1>Dashboard</h1>
+    <p class="pill">🔒 Tugaragaza **PAID + APPROVED gusa**</p>
 
-    <!-- Quick stats -->
-    <div class="kpis" style="margin-top:14px;">
-      <div class="kpi">
-        <div class="lbl">Total contributions (CAD)</div>
-        <div class="val" id="totalCad">0.00</div>
+    <!-- KPIs (PAID + APPROVED only) -->
+    <div class="grid" id="kpis">
+      <div class="card kpi">
+        <div class="lbl">Ibyishuwe byemejwe (CAD)</div>
+        <div class="val" id="kpiTotal">0.00</div>
       </div>
-      <div class="kpi">
-        <div class="lbl">Entries</div>
-        <div class="val" id="totalCount">0</div>
+      <div class="card kpi">
+        <div class="lbl">Umubare w’inyandiko zemejwe</div>
+        <div class="val" id="kpiCount">0</div>
+      </div>
+      <div class="card kpi">
+        <div class="lbl">Fund yagezweho cyane</div>
+        <div class="val" id="kpiTopFund">—</div>
       </div>
     </div>
 
-    <!-- Recent contributions -->
-    <section style="margin-top:18px;">
-      <h2>Recent contributions</h2>
-      <div id="recentList" class="muted">No contributions yet. <a href="contribute.html">Add one →</a></div>
-    </section>
-
-    <div style="display:flex; gap:10px; margin-top:18px;">
-      <button id="forgetDevice" style="background:#9ca3af;">Forget this device</button>
+    <!-- Per-fund subtotals -->
+    <div class="card" style="margin-top:12px;">
+      <h2>Subtotals kuri buri fund (PAID + APPROVED, CAD)</h2>
+      <div class="grid" id="fundTotals"></div>
     </div>
-  </div>
+
+    <!-- History (PAID + APPROVED only) -->
+    <div class="card" style="margin-top:12px;">
+      <div style="display:flex;justify-content:space-between;align-items:center;gap:8px;">
+        <h2>Contribution history (PAID + APPROVED)</h2>
+        <div>
+          <button class="btn secondary" id="btnExport">Export CSV</button>
+        </div>
+      </div>
+      <div id="historyBox" class="muted">—</div>
+    </div>
+
+    <!-- Admin approvals -->
+    <div id="adminBox" class="card" style="margin-top:12px;display:none;">
+      <h2>Pending approvals (PAID ariko ntibyemejwe)</h2>
+      <div id="pendingBox" class="muted">—</div>
+      <p class="muted" style="margin-top:8px;">💡 Uyu mwanya ugaragara kuri **admins** gusa.</p>
+    </div>
+  </main>
 
   <script>
-    // ---------- Auth guard ----------
-    function getUsers(){ try { return JSON.parse(localStorage.getItem("lng_users")||"{}"); } catch { return {}; } }
-    function getContribs(){ try { return JSON.parse(localStorage.getItem("lng_contribs")||"{}"); } catch { return {}; } }
-    function fmtMoney(n){ return new Intl.NumberFormat(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}).format(n); }
-
+    // ===== Auth =====
     const email = localStorage.getItem("lng_current_user");
     if (!email) { window.location.href = "index.html"; }
-
-    const users = getUsers();
-    const me = users[email];
-    if (!me) {
-      localStorage.removeItem("lng_current_user");
-      localStorage.removeItem("lng_remember");
-      window.location.href = "index.html";
-    }
-
-    // Navbar actions
     document.getElementById("logoutBtn").addEventListener("click", () => {
       localStorage.removeItem("lng_current_user");
       window.location.href = "index.html";
     });
-    document.getElementById("forgetDevice").addEventListener("click", () => {
-      localStorage.removeItem("lng_current_user");
-      localStorage.removeItem("lng_remember");
-      window.location.href = "index.html";
-    });
 
-    // ---------- Welcome content ----------
-    // Avatar initials from email
-    const avatar = document.getElementById("avatar");
-    const initials = email.split("@")[0].split(/[._-]/).slice(0,2).map(s=>s[0]?.toUpperCase()||"").join("").slice(0,2);
-    avatar.textContent = initials || "LN";
+    // ===== Helpers =====
+    function getContribs(){ try { return JSON.parse(localStorage.getItem("lng_contribs")||"{}"); } catch { return {}; } }
+    function setContribs(db){ localStorage.setItem("lng_contribs", JSON.stringify(db)); }
+    function fmt(n){ return new Intl.NumberFormat(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}).format(n||0); }
+    const FUNDS = ["savings","emergency","education","health","events","projects"];
+    const FUND_LABELS = {
+      savings:"Kwigomwa & Kuzigamira",
+      emergency:"Inkunga y’ihutirwa",
+      education:"Fonds y’Uburezi",
+      health:"Inkunga y’Ubuvuzi",
+      events:"Inkunga y’ibirori",
+      projects:"Imishinga y’iterambere"
+    };
 
-    // Greeting by time
-    const hour = new Date().getHours();
-    let greet = "Welcome";
-    if (hour < 12) greet = "Good morning";
-    else if (hour < 18) greet = "Good afternoon";
-    else greet = "Good evening";
-    document.getElementById("greet").textContent = `${greet}, ${email}!`;
-    document.getElementById("welcomeLine").textContent = me?.phone ? `Phone on file: ${me.phone}` : "Glad to see you here.";
+    // ===== Roles (admin?) =====
+    // 1) niba users[email].role === "admin" -> admin
+    // 2) cyangwa email irangirana na @lesnganyira.org -> admin (fallback yoroheje)
+    const users = JSON.parse(localStorage.getItem("lng_users")||"{}");
+    const me = users[email] || {};
+    const isAdmin = (me.role === "admin") || /@lesnganyira\.org$/i.test(email);
 
-    // Confetti once per day
-    (function confettiOnce(){
-      const todayKey = new Date().toISOString().slice(0,10);
-      const seen = localStorage.getItem("lng_welcome_seen_date");
-      if (seen === todayKey) return;
-      localStorage.setItem("lng_welcome_seen_date", todayKey);
-
-      const holder = document.getElementById("confetti");
-      const EMOJIS = ["🎉","✨","🎊","🟦","🟨","🟥","🟪","🟩"];
-      const count = 36;
-      const w = holder.clientWidth || 600;
-      for (let i=0;i<count;i++){
-        const s = document.createElement("span");
-        s.textContent = EMOJIS[Math.floor(Math.random()*EMOJIS.length)];
-        s.style.left = Math.random()*w + "px";
-        const dur = 1.8 + Math.random()*1.2;
-        const delay = Math.random()*0.6;
-        s.style.animationDuration = dur+"s";
-        s.style.animationDelay = delay+"s";
-        holder.appendChild(s);
-        setTimeout(()=> holder.removeChild(s), (dur+delay)*1000 + 200);
-      }
-    })();
-
-    // ---------- Stats & recent ----------
-    function renderStats() {
+    // ===== Filters =====
+    function getRowsAllMine(){
       const db = getContribs();
-      const rows = (db[email] || []);
-      const totalCad = rows.reduce((sum, r) => sum + (Number(r.amountCAD)||0), 0);
-      document.getElementById("totalCad").textContent = fmtMoney(totalCad);
-      document.getElementById("totalCount").textContent = rows.length;
+      return (db[email]||[]);
+    }
+    function getRowsPaidApproved(){
+      return getRowsAllMine().filter(r => (r.status||"").toLowerCase()==="paid" && r.approved===true);
+    }
+    function getRowsPending(){
+      return getRowsAllMine().filter(r => (r.status||"").toLowerCase()==="paid" && r.approved!==true);
     }
 
-    function renderRecent() {
-      const db = getContribs();
-      const rows = (db[email] || []).slice().reverse();
-      const recent = rows.slice(0, 5);
+    // ===== Render KPIs (paid+approved) =====
+    function renderKPIs(){
+      const rows = getRowsPaidApproved();
+      const total = rows.reduce((s,r)=> s + Number(r.amountCAD||0), 0);
+      document.getElementById("kpiTotal").textContent = fmt(total);
+      document.getElementById("kpiCount").textContent = rows.length;
 
-      const box = document.getElementById("recentList");
-      if (!recent.length) {
-        box.innerHTML = 'No contributions yet. <a href="contribute.html">Add one →</a>';
-        return;
-      }
+      const agg = {};
+      rows.forEach(r=>{
+        const k = r.fund || "savings";
+        agg[k] = (agg[k]||0) + Number(r.amountCAD||0);
+      });
+      let top = "—", topVal = -1;
+      Object.keys(agg).forEach(k=>{ if (agg[k]>topVal){ top=k; topVal=agg[k]; }});
+      document.getElementById("kpiTopFund").textContent = top==="—" ? "—" : (FUND_LABELS[top]||top);
+    }
 
+    // ===== Per-fund (paid+approved) =====
+    function renderFundTotals(){
+      const rows = getRowsPaidApproved();
+      const totals = FUNDS.reduce((o,k)=> (o[k]=0,o),{});
+      rows.forEach(r=>{ totals[r.fund||"savings"] += Number(r.amountCAD||0); });
+      const box = document.getElementById("fundTotals");
+      box.innerHTML = FUNDS.map(k=>`
+        <div class="card kpi">
+          <div class="lbl">${FUND_LABELS[k]}</div>
+          <div class="val">${fmt(totals[k])} CAD</div>
+        </div>
+      `).join("");
+    }
+
+    // ===== History (paid+approved) =====
+    function renderHistory(){
+      const rows = getRowsPaidApproved().slice().reverse();
+      const box = document.getElementById("historyBox");
+      if (!rows.length){ box.textContent = "Nta byemejwe biragaragara."; return; }
       let html = '<div style="overflow:auto;"><table class="simple">';
-      html += '<thead><tr><th>Date</th><th>Original</th><th>In CAD</th><th>Note</th></tr></thead><tbody>';
-      recent.forEach(r => {
-        const d = new Date(r.at).toLocaleString();
+      html += `<thead><tr>
+        <th>Itariki</th>
+        <th>Fund</th>
+        <th>Byatangirijweho</th>
+        <th>Mu CAD</th>
+        <th>Ibisobanuro</th>
+        <th>Ref</th>
+      </tr></thead><tbody>`;
+      rows.forEach(r=>{
+        const d = new Date(r.at||Date.now()).toLocaleString();
         html += `<tr>
           <td>${d}</td>
-          <td>${fmtMoney(r.amountOriginal)} ${r.currency}</td>
-          <td>${fmtMoney(r.amountCAD)} CAD</td>
-          <td>${r.note || ""}</td>
+          <td>${FUND_LABELS[r.fund||"savings"]||r.fund}</td>
+          <td>${fmt(r.amountOriginal)} ${r.currency||""}</td>
+          <td>${fmt(r.amountCAD)} CAD</td>
+          <td>${(r.note||"")}</td>
+          <td>${r.tx_ref||""}</td>
         </tr>`;
       });
       html += '</tbody></table></div>';
       box.innerHTML = html;
     }
 
-    renderStats();
-    renderRecent();
+    // ===== Admin Approvals (paid but not approved) =====
+    function approveTx(tx_ref){
+      const db = getContribs();
+      const arr = db[email] || [];
+      const rec = arr.find(r=> r.tx_ref===tx_ref);
+      if (rec){ rec.approved = true; setContribs(db); renderAll(); }
+    }
+    function rejectTx(tx_ref){
+      if (!confirm("Uremeza kwanga (gusiba) iyi nyandiko?")) return;
+      const db = getContribs();
+      db[email] = (db[email]||[]).filter(r=> r.tx_ref!==tx_ref);
+      setContribs(db);
+      renderAll();
+    }
+    function renderPending(){
+      const box = document.getElementById("pendingBox");
+      const rows = getRowsPending().slice().reverse();
+      if (!isAdmin){
+        document.getElementById("adminBox").style.display = "none";
+        return;
+      }
+      document.getElementById("adminBox").style.display = "block";
+      if (!rows.length){ box.textContent = "Nta byategereje kwemezwa."; return; }
+      let html = '<div style="overflow:auto;"><table class="simple">';
+      html += `<thead><tr>
+        <th>Itariki</th>
+        <th>Fund</th>
+        <th>Byatangirijweho</th>
+        <th>Mu CAD</th>
+        <th>Ref</th>
+        <th>Actions</th>
+      </tr></thead><tbody>`;
+      rows.forEach(r=>{
+        const d = new Date(r.at||Date.now()).toLocaleString();
+        html += `<tr>
+          <td>${d}</td>
+          <td>${FUND_LABELS[r.fund||"savings"]||r.fund}</td>
+          <td>${fmt(r.amountOriginal)} ${r.currency||""}</td>
+          <td>${fmt(r.amountCAD)} CAD</td>
+          <td>${r.tx_ref||""}</td>
+          <td>
+            <button class="btn" onclick="approveTx('${r.tx_ref||''}')">Approve</button>
+            <button class="btn ghost danger" onclick="rejectTx('${r.tx_ref||''}')">Reject</button>
+          </td>
+        </tr>`;
+      });
+      html += '</tbody></table></div>';
+      box.innerHTML = html;
+    }
+
+    // ===== Export CSV (approved only) =====
+    document.getElementById("btnExport").addEventListener("click", ()=>{
+      const rows = getRowsPaidApproved();
+      if (!rows.length){ alert("Nta byemejwe byo kohereza."); return; }
+      const header = ["date","fund","amountOriginal","currency","amountCAD","note","tx_ref"];
+      const csv = [header.join(",")].concat(rows.map(r=>{
+        const d = new Date(r.at||Date.now()).toISOString();
+        return [d, r.fund||"", r.amountOriginal||0, r.currency||"", r.amountCAD||0, (r.note||"").replace(/,/g,";"), r.tx_ref||""].join(",");
+      })).join("\n");
+      const blob = new Blob([csv], {type:"text/csv;charset=utf-8;"});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url; a.download = "les-nganyira_paid_approved_contributions.csv";
+      document.body.appendChild(a); a.click(); document.body.removeChild(a);
+      URL.revokeObjectURL(url);
+    });
+
+    function renderAll(){
+      renderKPIs(); renderFundTotals(); renderHistory(); renderPending();
+    }
+
+    // First paint
+    renderAll();
   </script>
 </body>
 </html>
