--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,9 @@
     body { background-color: #f8f9fa; }
     .lang-switch { position: fixed; top: 12px; right: 12px; z-index: 1040; }
     .card { border-radius: 1rem; }
+    /* Medium welcome banner sizing */
+    .banner-card { max-width: 720px; margin: 0 auto; }
+    .banner-img { width: 100%; height: 280px; object-fit: cover; object-position: center; border-top-left-radius: inherit; border-top-right-radius: inherit; }
   </style>
 </head>
 <body>
@@ -36,9 +39,9 @@
     </div>
 
     <!-- Welcome Image Banner -->
-    <div class="card shadow-sm mb-4">
+    <div class="card shadow-sm mb-4 banner-card">
       <a href="https://www.google.com/imgres?q=welcome%20to%20our%20family%20pictures&imgurl=https%3A%2F%2Fi.pinimg.com%2F736x%2Fc3%2F40%2F09%2Fc34009ee2f5c69979feb276449a3c57f.jpg&imgrefurl=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F737675613948318521%2F&docid=VuXRMGwV_E0WjM&tbnid=wmYYsJkI476hYM&vet=12ahUKEwj7nba1qoaPAxULmYkEHQ9JPb0QM3oECDYQAA..i&w=601&h=601&hcb=2&ved=2ahUKEwj7nba1qoaPAxULmYkEHQ9JPb0QM3oECDYQAA" target="_blank" rel="noopener" class="text-decoration-none">
-        <img src="https://i.pinimg.com/736x/c3/40/09/c34009ee2f5c69979feb276449a3c57f.jpg" class="card-img-top" alt="Welcome banner" />
+        $1card-img-top banner-img$2 alt="Welcome banner" />
       </a>
       <div class="card-body text-center">
         <span class="fw-semibold" data-i18n="welcome_banner">Welcome to our family!</span>
