--- a/index.html
+++ b/index.html
@@ -1,113 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rw">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Les NGANYIRA — Access</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Les Nganyira - Kwiyandikisha</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { background:#f8f9fa; }
+    .hero-img { max-width: 720px; width: 100%; border-radius: 20px; display:block; margin: 20px auto; }
+    .card { border-radius: 18px; }
+  </style>
 </head>
-<body>
-  <div class="auth-card">
-    <h1>Les NGANYIRA</h1>
+<body class="container py-4">
 
-    <!-- LOGIN -->
-    <form id="loginForm" autocomplete="on">
-      <h2>Log in</h2>
+  <header class="text-center mb-3">
+    <h1 class="fw-bold">Les Nganyira Family</h1>
+    <p class="text-muted m-0">United for our future</p>
+  </header>
 
-      <label for="loginEmail">Email</label>
-      <input type="email" id="loginEmail" placeholder="you@example.com" required/>
+  <!-- Ifoto "moyen" (ishushanyije neza kuri mobile na desktop) -->
+  <img
+    class="hero-img img-fluid shadow"
+    src="https://i.pinimg.com/736x/c3/40/09/c34009ee266d0ff4d1ef30dfb1e6a5d6.jpg"
+    alt="Welcome to our family" />
 
-      <label for="loginPassword">Password</label>
-      <div class="pw-wrap">
-        <input type="password" id="loginPassword" placeholder="Your password" required/>
-        <button type="button" class="toggle" data-target="loginPassword">Show</button>
-      </div>
-
-      <label class="remember">
-        <input type="checkbox" id="rememberMe"/> Remember me on this device
-      </label>
-
-      <button type="submit">Log in</button>
-      <p class="muted"><a href="#" id="toReset">Forgot password?</a></p>
-      <p class="muted">First time here? <a href="#" id="toSignup">Create an account</a></p>
-      <p id="loginError" class="error"></p>
-    </form>
-
-    <!-- SIGN UP -->
-    <form id="signupForm" style="display:none;" autocomplete="on">
-      <h2>Create account</h2>
-
-      <label for="signupEmail">Email</label>
-      <input type="email" id="signupEmail" placeholder="you@example.com" required/>
-
-      <label>Phone number</label>
-      <div class="phone-row">
-        <!-- Dropdown fallback -->
-        <select id="countryCode" required>
-          <option value="+250" selected>🇷🇼 +250 Rwanda</option>
-          <option value="+256">🇺🇬 +256 Uganda</option>
-          <option value="+254">🇰🇪 +254 Kenya</option>
-          <option value="+1">🇺🇸 +1 USA/Canada</option>
-          <option value="+44">🇬🇧 +44 UK</option>
-          <option value="custom">🌍 Other (enter custom)</option>
-        </select>
-        <input type="tel" id="signupPhone" placeholder="7XXXXXXXX or local number" required/>
-      </div>
-
-      <div id="customCodeWrap" class="custom-code" style="display:none;">
-        <input type="text" id="customCode" placeholder="+999 (custom code)"/>
-      </div>
-
-      <label for="signupPassword">Password</label>
-      <div class="pw-wrap">
-        <input type="password" id="signupPassword" placeholder="Min 8 characters" required/>
-        <button type="button" class="toggle" data-target="signupPassword">Show</button>
-      </div>
-
-      <!-- Password strength meter -->
-      <div id="pwMeter" class="meter"><span id="pwBar"></span></div>
-      <div id="pwHints" class="hints">
-        <span id="hLen">8+ chars</span>
-        <span id="hMix">letters & numbers</span>
-        <span id="hUpper">uppercase</span>
-        <span id="hSpecial">symbol</span>
-      </div>
-
-      <button type="submit">Sign up</button>
-      <p class="muted">Already registered? <a href="#" id="toLogin">Log in</a></p>
-      <p id="signupError" class="error"></p>
-    </form>
-
-    <!-- RESET -->
-    <form id="resetForm" style="display:none;" autocomplete="off">
-      <h2>Reset password</h2>
-
-      <label for="resetEmail">Email</label>
-      <input type="email" id="resetEmail" placeholder="you@example.com" required/>
-
-      <label for="resetPhone">Phone number (with country code)</label>
-      <input type="tel" id="resetPhone" placeholder="+2507XXXXXXXX" required/>
-
-      <label for="resetPassword">New password</label>
-      <div class="pw-wrap">
-        <input type="password" id="resetPassword" placeholder="Min 8 characters" required/>
-        <button type="button" class="toggle" data-target="resetPassword">Show</button>
-      </div>
-
-      <label for="resetPassword2">Confirm new password</label>
-      <div class="pw-wrap">
-        <input type="password" id="resetPassword2" placeholder="Retype password" required/>
-        <button type="button" class="toggle" data-target="resetPassword2">Show</button>
-      </div>
-
-      <button type="submit">Set new password</button>
-      <p class="muted"><a href="#" id="backToLoginFromReset">Back to log in</a></p>
-      <p id="resetError" class="error"></p>
-      <p id="resetSuccess" class="success"></p>
-    </form>
-  </div>
-
-  <!-- JS must be last -->
-  <script src="script.js"></script>
-</body>
-</html>
+  <div class="row justify-content-center">
+    <div class="col-lg-6">
+      <div class="card shadow-sm p-3 p-md-4">
+        <h2 class="h4 mb-3">Kwiyandikisha</h2>
+        <form id="signupForm" novalidate>
+          <div class="mb-3">
+            <label for="fullName" class="form-label">Amazina</label>
+            <input type="text" id="fullName" name="fullName" class="form-control" placeholder="Amazina yawe" required />
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-lab
